--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -1,12 +1,3 @@
-- name: install stow
-  become: true
-  package:
-    name: stow
-    state: present
-  tags:
-    - install
-    - dotfiles
-    - stow
 - name: clone .dotfiles.git
   ansible.builtin.git:
     repo: "git@github.com:ericandrsson/.dotfiles.git"
@@ -20,7 +11,7 @@
     - dotfiles
     - stow
 - name: stow dotfiles
-  shell: cd $HOME/.dotfiles && ./install
+  shell: cd $HOME/.dotfiles && ./uninstall && ./install
   tags:
     - install
     - dotfiles
